# openclaw

./: .env.example  .gitignore  .mcp.json  QUY_TAC_PHONG_VAN.md  fix-all-skills.mjs  projects.json  reset_interview.sh  test-skills.mjs
docs/: BUG_REPORT_HOOKS.md  FEATURE_SETUPGROUP.md  PROJECT_CONTEXT_ISSUES.md  agentic_memory_para.md  bot_onboarding_guide.md
docs/bugs/: bug_json_message_format.md
docs/seadev/: interview-prep.md  mock-interview.md  shedpro-research.md
docs/team/: BOOTSTRAP.md  IMPLEMENTATION_GUIDE.md  PROCESS.md  ROLES.md  RULES.md  SOP_OVERVIEW.md
projects/demo-app/: README.md
pvbot/: AGENTS.md  BOOT.md  IDENTITY.md  PROTOCOL.md  SOUL.md
pvbot/memory/: 2026-02-05-1538.md  2026-02-05-1540.md  2026-02-05.md
scripts/: prune-sessions.ts  telegram-groups.sh
seadev/: interview-script-larry.md  interview-script.md  jd.md  research.md
seadev/interview-scripts/: project-coordinator-interview-script.md
seadev/interviews/: interview-2026-02-05-LyTruong.md  interview-2026-02-05-Sarah.md  interview-2026-02-05-lý-trương.md  interview-questions.md
skills/Browse/: SKILL.md
skills/Content/: SKILL.md
skills/DDMemo/: SKILL.md
skills/GTD/: SKILL.md  learnings.md
skills/Product Manager/: SKILL.md
skills/Product-Discovery/: SKILL.md
skills/Research/: SKILL.md  search_queries.json
skills/Telegram/: SKILL.md
skills/agent-browser/: SKILL.md  (+1 more)
uvbot/: AGENTS.md  BOOT.md  IDENTITY.md  PROTOCOL.md  SOUL.md  interview-prep.md  interview-preparation.md
uvbot/csv-to-parquet/: Cargo.toml  README.md  sample.csv
uvbot/csv-to-parquet/src/: main.rs
(+75 files in other folders)
