[package]
name = "csv-to-parquet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "csv-to-parquet"
path = "src/main.rs"

[dependencies]
arrow = "52"
parquet = { version = "52", features = ["arrow"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"